I am adding the code to ask questions as well as some css styling

--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>About Me</h1>
-    <ul>
-      <li>Things to Know</li>
-      <li>I like my gf :)</li>
-      <li>I be making money finally</li>
-      </ul>
-      <script src="js/app.js" ></script>
+    
+    <h1>About Jackson :)</h1>
+    <img src = "https://images.squarespace-cdn.com/content/v1/51b3dc8ee4b051b96ceb10de/1433948698872-ASWXQF1EBJ8E3BTBZ1MW/image-asset.jpeg"alt = "cool photo of a cool duude" id="Hacker">
+    <div class = 'container'>
+      <p>Work Experience</p>
+      <div class = 'box'>I havent had any job for longer than a year than my stint in the Coast Guard which besides my bootcamp in New Jersey I spent in Kodiak, Ak. It was cold, wet, and for six months out of the year, I spent it looking out at the water. The things that made this expierienc not miserable were my friends and my girlfriend. Since I've gotten out, I worked for a month at a security company, a year delievering medicine for mary bridge in Tacoma, and now here at Codefellows.</div>
+      <p>Education</p>
+      <div class = 'box'>I grew up in Maple Valley which is only a 45 minute drive from Seattle on a good day. I graduated with completly average grades from Tahoma High School and tried college for a few quarters while I was learn how life was like after the structure of high school. I dropped out, joined the military and now im being paid to learn how to code which is alright I guess.</div>
+      <p>Goals</p>
+      <div class = 'box'>I have a few goals that I am working towards. I want to save up for a down payment on a house soon, so getting this job is acutally saving me money since my rent is only 1000 dollars and the BAH gets me more than enough for that and then some. I also would like to get married wihthin the next two years depending or not if my girlfriend says yes, even though I know she would and lastly getting a job in the tech field. My goal is just getting my foot in the door at a internship and trying to move into a full or part time roll within a year of starting this school.</div>
+    </div>  
+    <script src="js/app.js" ></script>
   </body>
 </html>
