--- a/index.html
+++ b/index.html
@@ -1,54 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>About My Life</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <main>
-      <h1>About Jackson :)</h1>
-      <!--<img src = "https://images.squarespace-cdn.com/content/v1/51b3dc8ee4b051b96ceb10de/1433948698872-ASWXQF1EBJ8E3BTBZ1MW/image-asset.jpeg"alt = "cool photo of a cool duude" id="Hacker">-->
-      <section class="Bio">
-        <section class="row">
-          <div>Biography</div>
-          <div>I was born and raised in the city of Maple Valley. I grew up witha completly normal life, I rode my bike and played the trumpet. I spent a lot of my time growing up in band or on the robotics club.When I graduated I tried college for a few months before I moved onto the Coast guard. It was cold, wet, and for six months out of the year, I spent it looking out at sea. The things that made this experience not miserable were my friends and my girlfriend. Since I've gotten out, I worked for a month at a security company, a year delievering medicine for Mary bridge in Tacoma, and now here at Codefellows.</div>
-        </section>
-        <section class="row">
-          <div>Work Experience</div>
-          <ul>
-            <li>Coast Guard 2017-2020</li>
-            <li>Mary Bridge 2021-2022</li>
-          </ul>>
-        </section>
-        <section class="row">
-          <div>Education</div>
-          <ul>
-            <li>High School Diploma-Tahoma High School, 2016</li>
-            <li>College, 60ish Credits at Green River Community College</li>
-            <li>Codefellows, Expected to graduate Dec,2022</li>
-          </ul>
-        </section>
+
+<head>
+  <meta charset="UTF-8">
+  <title>About My Life</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <main>
+    <h1>About Jackson :)</h1>
+    <!--<img src = "https://images.squarespace-cdn.com/content/v1/51b3dc8ee4b051b96ceb10de/1433948698872-ASWXQF1EBJ8E3BTBZ1MW/image-asset.jpeg"alt = "cool photo of a cool duude" id="Hacker">-->
+    <section class="Bio">
+      <section class="row">
+        <div>Biography</div>
+        <div>I was born and raised in the city of Maple Valley. I grew up witha completly normal life, I rode my bike
+          and played the trumpet. I spent a lot of my time growing up in band or on the robotics club.When I graduated I
+          tried college for a few months before I moved onto the Coast guard. It was cold, wet, and for six months out
+          of the year, I spent it looking out at sea. The things that made this experience not miserable were my friends
+          and my girlfriend. Since I've gotten out, I worked for a month at a security company, a year delievering
+          medicine for Mary bridge in Tacoma, and now here at Codefellows.</div>
       </section>
-      <section>
-        <ul id="Fav">
-          <h2>Favourite Books this Year</h2>
-          <p>In no paticular order</p>
-          <li>Lord of the Rings</li>
-          <li>The Hobbit</li>
-          <li>Braiding Sweetgrass</li>
-          <li>Harry Potter the Pop up Book</li>
-          <li>Fallout 1 Guide</li>
-          <li>Dune(Incomplete)</li>
-          <li>Oyasumi Punpun</li>
-          <li>I dont read a lot</li>
-          <li>Thats all that comes to mind</li>
-          <li>Ill add more later</li>
+      <section class="row">
+        <div>Work Experience</div>
+        <ul>
+          <li>Coast Guard 2017-2020</li>
+          <li>Mary Bridge 2021-2022</li>
+        </ul>>
+      </section>
+      <section class="row">
+        <div>Education</div>
+        <ul>
+          <li>High School Diploma-Tahoma High School, 2016</li>
+          <li>College, 60ish Credits at Green River Community College</li>
+          <li>Codefellows, Expected to graduate Dec,2022</li>
         </ul>
-    </section>  
+      </section>
+    </section>
+    <section>
+      <ul id="Fav">
+        <h2>Favourite Books this Year</h2>
+        <p>In no paticular order</p>
+        <li>Lord of the Rings</li>
+        <li>The Hobbit</li>
+        <li>Braiding Sweetgrass</li>
+        <li>Harry Potter the Pop up Book</li>
+        <li>Fallout 1 Guide</li>
+        <li>Dune(Incomplete)</li>
+        <li>Oyasumi Punpun</li>
+        <li>I dont read a lot</li>
+        <li>Thats all that comes to mind</li>
+        <li>Ill add more later</li>
+      </ul>
+    </section>
     <footer>Page By Jackson Gurney</footer>
-      <script src="js/app.js" ></script>
-    </main>
-  </body>
+    <script src="js/app.js"></script>
+  </main>
+</body>
+
 </html>
