Added the functions to the 5 questions, then added the questions to arrays and had a while loop run thru the questions.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <h1>About Jackson :)</h1>
-    <!--<img src = "https://images.squarespace-cdn.com/content/v1/51b3dc8ee4b051b96ceb10de/1433948698872-ASWXQF1EBJ8E3BTBZ1MW/image-asset.jpeg"alt = "cool photo of a cool duude" id="Hacker">-->
+    <img src = "https://images.squarespace-cdn.com/content/v1/51b3dc8ee4b051b96ceb10de/1433948698872-ASWXQF1EBJ8E3BTBZ1MW/image-asset.jpeg"alt = "cool photo of a cool duude" id="Hacker">
     <section class="Bio">
       <section class="row">
         <div>Biography</div>
