--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <main>
-    <h1>About Jackson :)</h1>
+    <header>About Jackson :)</header>
     <img src = "https://images.squarespace-cdn.com/content/v1/51b3dc8ee4b051b96ceb10de/1433948698872-ASWXQF1EBJ8E3BTBZ1MW/image-asset.jpeg"alt = "cool photo of a cool duude" id="Hacker">
     <section class="Bio">
       <section class="row">
